# NeuroSoC

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.akida  EIA_Project_Brief.docx  README.md  docker-compose.akida.yml  pyproject.toml  requirements.txt
docs/: akida_ecg_results.md  akida_heart_results.md  akida_retarget_task.md  bringup_plan.md  ecg_quant_diagnosis.md  ecg_quant_fixes_results.md  eeg_frontend_results.md  eeg_frontend_task.md  eeg_seizure_results.md  eeg_seizure_task.md  hardware_bom.md  hardware_design_spec.md  heart_sounds_results.md  heart_sounds_task.md  lbnp_data_request_emails.md  lung_sounds_task.md  per_modality_xylo_verify_task.md  ptbxl_mi_results.md  ptbxl_mi_task.md  real_hemorrhage_dataset_task.md  shockable_rhythm_results.md  shockable_rhythm_task.md  synthetic_crm_results.md  synthetic_crm_task.md  vitaldb_case_level_results.md  vitaldb_case_level_task.md  vitaldb_ppg_hemorrhage_task.md  vitaldb_ppg_results.md  xylo_verification_task.md
notebooks/: 01_ecg_snn.ipynb  02_eeg_seizure.ipynb  03_akida_ecg.ipynb  04_mvp_pitch.ipynb
scripts/: akida_docker_run.sh  akida_verify.py  diagnose_ecg_quant.py  vitaldb_case_level.py  xylo_verify.py
src/eia/: __init__.py  akida_models.py  case_level.py  datasets.py  device.py  eeg_features.py  encoding.py  energy.py  models.py  report.py  rockpool_models.py  signal_features.py  train.py  viz.py  xylo_budget.py
tests/: test_akida_models.py  test_case_level.py  test_datasets.py  test_eeg.py  test_eeg_features.py  test_encoding.py  test_energy.py  test_report.py  test_signal_features.py  test_xylo_budget.py
